[package]
name = "quotemeta"
version = "0.1.0"
authors = ["Peter Corlett <abuse@cabal.org.uk>"]
edition = "2018"

categories = ["command-line-utilities"]
description = "Shell-quoting, à la Perl's `quotemeta` function."
keywords = ["cli"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mooli/quotemeta-rs"

[features]
default = ["clippy-insane"]

clippy-insane = []              # turn clippy up to eleven

[dependencies]
